// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sortable tableView can sort the data with by a specific column 1`] = `
"
            <div id=\\"app\\"><div><div><input type=\\"text\\" name=\\"table-view-filter\\"> <!----> <table><thead><tr><th class=\\"sort-\\">
    First name
</th><th>
    Last name
</th><th>
    Color
</th></tr></thead> <tbody><tr><td>Devon</td><td>Macharis</td><td>Yellow</td></tr><tr><td>Jay</td><td>Vleugels</td><td>Red</td></tr><tr><td>Randy</td><td>Paret</td><td>Green</td></tr><tr><td>Wesley</td><td>Biets</td><td>Blue</td></tr></tbody></table> <!----> <div style=\\"display: none;\\"><th>
    First name
</th> <th>
    Last name
</th> <th>
    Color
</th></div></div></div></div>
        "
`;

exports[`Sortable tableView can sort the data with by a specific column in a specific order 1`] = `
"
            <div id=\\"app\\"><div><div><input type=\\"text\\" name=\\"table-view-filter\\"> <!----> <table><thead><tr><th class=\\"sort-desc\\">
    First name
</th><th>
    Last name
</th><th>
    Color
</th></tr></thead> <tbody><tr><td>Wesley</td><td>Biets</td><td>Blue</td></tr><tr><td>Randy</td><td>Paret</td><td>Green</td></tr><tr><td>Jay</td><td>Vleugels</td><td>Red</td></tr><tr><td>Devon</td><td>Macharis</td><td>Yellow</td></tr></tbody></table> <!----> <div style=\\"display: none;\\"><th>
    First name
</th> <th>
    Last name
</th> <th>
    Color
</th></div></div></div></div>
        "
`;

exports[`Sortable tableView can sort the data with by another specific column 1`] = `
"
            <div id=\\"app\\"><div><div><input type=\\"text\\" name=\\"table-view-filter\\"> <!----> <table><thead><tr><th>
    First name
</th><th class=\\"sort-\\">
    Last name
</th><th>
    Color
</th></tr></thead> <tbody><tr><td>Wesley</td><td>Biets</td><td>Blue</td></tr><tr><td>Devon</td><td>Macharis</td><td>Yellow</td></tr><tr><td>Randy</td><td>Paret</td><td>Green</td></tr><tr><td>Jay</td><td>Vleugels</td><td>Red</td></tr></tbody></table> <!----> <div style=\\"display: none;\\"><th>
    First name
</th> <th>
    Last name
</th> <th>
    Color
</th></div></div></div></div>
        "
`;

exports[`Sortable tableView it will change the sort order when clicking the header of the column with the active sort 1`] = `
"
            <div id=\\"app\\"><div><div><input type=\\"text\\" name=\\"table-view-filter\\"> <!----> <table><thead><tr><th class=\\"sort-desc\\">
    First name
</th><th>
    Last name
</th><th>
    Color
</th></tr></thead> <tbody><tr><td>Wesley</td><td>Biets</td><td>Blue</td></tr><tr><td>Randy</td><td>Paret</td><td>Green</td></tr><tr><td>Jay</td><td>Vleugels</td><td>Red</td></tr><tr><td>Devon</td><td>Macharis</td><td>Yellow</td></tr></tbody></table> <!----> <div style=\\"display: none;\\"><th>
    First name
</th> <th>
    Last name
</th> <th>
    Color
</th></div></div></div></div>
        "
`;

exports[`Sortable tableView will not sort data when clicking a non-sortable column header 1`] = `
"
            <div id=\\"app\\"><div><div><input type=\\"text\\" name=\\"table-view-filter\\"> <!----> <table><thead><tr><th class=\\"sort-\\">
    First name
</th><th>
    Last name
</th><th>
    Color
</th></tr></thead> <tbody><tr><td>Devon</td><td>Macharis</td><td>Yellow</td></tr><tr><td>Jay</td><td>Vleugels</td><td>Red</td></tr><tr><td>Randy</td><td>Paret</td><td>Green</td></tr><tr><td>Wesley</td><td>Biets</td><td>Blue</td></tr></tbody></table> <!----> <div style=\\"display: none;\\"><th>
    First name
</th> <th>
    Last name
</th> <th>
    Color
</th></div></div></div></div>
        "
`;

exports[`Sortable tableView will not sort on a column that is not sortable 1`] = `
"
            <div id=\\"app\\"><div><div><input type=\\"text\\" name=\\"table-view-filter\\"> <!----> <table><thead><tr><th>
    First name
</th><th>
    Last name
</th><th>
    Color
</th></tr></thead> <tbody><tr><td>Devon</td><td>Macharis</td><td>Yellow</td></tr><tr><td>Jay</td><td>Vleugels</td><td>Red</td></tr><tr><td>Randy</td><td>Paret</td><td>Green</td></tr><tr><td>Wesley</td><td>Biets</td><td>Blue</td></tr></tbody></table> <!----> <div style=\\"display: none;\\"><th>
    First name
</th> <th>
    Last name
</th> <th>
    Color
</th></div></div></div></div>
        "
`;

exports[`Sortable tableView will sort the data descendingly if the header of of column without the active sort is clicked 1`] = `
"
            <div id=\\"app\\"><div><div><input type=\\"text\\" name=\\"table-view-filter\\"> <!----> <table><thead><tr><th class=\\"\\">
    First name
</th><th class=\\"sort-desc\\">
    Last name
</th><th>
    Color
</th></tr></thead> <tbody><tr><td>Jay</td><td>Vleugels</td><td>Red</td></tr><tr><td>Randy</td><td>Paret</td><td>Green</td></tr><tr><td>Devon</td><td>Macharis</td><td>Yellow</td></tr><tr><td>Wesley</td><td>Biets</td><td>Blue</td></tr></tbody></table> <!----> <div style=\\"display: none;\\"><th>
    First name
</th> <th>
    Last name
</th> <th>
    Color
</th></div></div></div></div>
        "
`;
